// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration::enter password should return enter password page with reauth analytics properties 1`] = `
Object {
  "contentId": "c6f4fed1-ee6d-4d23-a14f-4466e9c1349c",
  "taxonomyLevel1": "accounts",
  "taxonomyLevel2": "re auth",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter password should return error when csrf not present 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "",
  "taxonomyLevel2": "",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter password should return validation error when password is incorrect 1`] = `
Object {
  "contentId": "c6f4fed1-ee6d-4d23-a14f-4466e9c1349c",
  "taxonomyLevel1": "accounts",
  "taxonomyLevel2": "re auth",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter password should return validation error when password not entered 1`] = `
Object {
  "contentId": "c6f4fed1-ee6d-4d23-a14f-4466e9c1349c",
  "taxonomyLevel1": "accounts",
  "taxonomyLevel2": "re auth",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;
